--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -2,9 +2,38 @@
   display: flex;
   height: 90px;
   background-color: blue;
-  align-items: center;
 }
 
 .logo {
   padding-left: 1rem;
+  transition: all 0.3s ease-out;
+  cursor: pointer;
+}
+
+.logo:hover {
+  scale: 1.3;
+}
+
+.search {
+  position: relative;
+  right: 5rem;
+  text-decoration: none;
+  transition: all 0.3s ease-out;
+}
+
+.search:hover {
+  cursor: pointer;
+}
+
+.search-link {
+  text-decoration: none;
+  color: black;
+}
+
+.search:hover {
+  scale: 1.3;
+}
+
+.search:active {
+  color: grey;
 }
