--- a/frontend/src/routes/AuthPage.css
+++ b/frontend/src/routes/AuthPage.css
@@ -1,5 +1,21 @@
 .register {
+    padding-top: 13rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;   /* horizontal center */
+    align-items: center;
+}
+
+.more-info {
+    padding-top:3rem;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
+
+}
+
+.magnifying {
+    height: 100px;
+    rotate:-110deg;
 }
