--- a/frontend/src/routes/MyProductsPage.css
+++ b/frontend/src/routes/MyProductsPage.css
@@ -1,6 +1,6 @@
-.products-container {
-    display: flex;
-    flex-direction: column;
+.products-page {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .search-container {
