--- a/frontend/src/routes/MyProductsPage.css
+++ b/frontend/src/routes/MyProductsPage.css
@@ -25,6 +25,11 @@
 
 .product-card {
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+    transition: all 0.1s ease-out;
+}
+
+.product-card:hover {
+    scale: 1.05
 }
 
 .product-card:nth-child(2n) {
