--- a/frontend/src/components/Modal.css
+++ b/frontend/src/components/Modal.css
@@ -1,5 +1,35 @@
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes shake {
+  0%   { transform: translateX(0); }
+  20%  { transform: translateX(-5px); }
+  40%  { transform: translateX(5px); }
+  60%  { transform: translateX(-5px); }
+  80%  { transform: translateX(5px); }
+  100% { transform: translateX(0); }
+}
+
+@keyframes flip {
+  100% {
+    transform: rotateY(360deg)
+  }
+}
+
+.shake {
+  animation: shake 0.5s ease-in-out;
+}
+
 .modal-background {
+  padding-bottom: 90px;
   position: fixed;
+  height: 100%;
   top: 0;
   left: 0;
   right: 0;
@@ -10,8 +40,18 @@
   align-items: center;
   z-index: 1000;
   transition: all 0.3s ease-in-out;
+}
+
+.modal-background.error {
+  background-color: rgba(255, 0, 0, 0.2);
+  animation: shake 0.5s ease-in-out;
   
 }
+.modal-background.success {
+  background-color: rgba(0, 255, 0, 0.05);
+  
+}
+
 .info-area {
   justify-content: space-around;
   align-items: center;
@@ -22,6 +62,11 @@
   height: 31.25rem;
   background: linear-gradient(yellow, grey);
   border-radius: 1rem;
+  padding: .5rem;
+}
+
+.modal-background.success>.info-area {
+  animation: flip 0.5s ease-in-out;
 }
 
 .close-button {
@@ -35,10 +80,6 @@
 .close-button:hover {
   scale: 1.3;
   cursor: pointer;
-}
-
-.spinning-circles {
-  justify-self: center;
 }
 
 .error {
