--- a/frontend/src/components/ProductSearch.css
+++ b/frontend/src/components/ProductSearch.css
@@ -3,8 +3,28 @@
     height: 3rem;
     width: 1000px;
     text-align: center;
+    outline: none;
 }
 
 .searchbar::placeholder {
     text-align: center;
 }
+
+.fixed-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px; /* anchor point */
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: width 0.3s ease, right 0.3s ease;
+      width: 100px;
+    }
+
+    .fixed-button:hover {
+      width: 200px;
+      right: -80px; /* shifts left by 100px (half of growth) */
+    }
