--- a/frontend/src/routes/MyProductsPage.css
+++ b/frontend/src/routes/MyProductsPage.css
@@ -13,6 +13,8 @@
     flex-direction: column;
     align-items: center;
     margin: 4rem;
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+    border-radius: 1rem;
 }
 
 .favorites-col {
@@ -21,8 +23,10 @@
     justify-content: center;
     position: absolute;
     right: 0;
-    margin-top: 11.5rem;
-    margin-right:4rem;
+    margin: 4rem;
+    padding: 1rem;
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+    border-radius: 1rem;
 }
 
 .favorites-title {
