--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -17,6 +17,7 @@
 
 .logo-options {
   display: flex;
+  flex-direction: column;
   opacity: 0;                   
   pointer-events: none;
   position: absolute;
@@ -27,7 +28,7 @@
 .logo-options.active {
   opacity: 1;
   pointer-events:all;
-  transform: translateY(4rem)
+  transform: translateY(5rem)
 }
 
 .auth-button.log-out{
@@ -35,7 +36,6 @@
   border-radius: .5rem;
   color: rgb(230, 92, 92);
   background-color: blue;
-  
   box-shadow: 0 1px 5px rgb(0, 0, 0, 0.5);
 }
 
@@ -54,6 +54,15 @@
   background-color: yellow;
   box-shadow: 0 1px 5px rgb(0, 0, 0, 0.5);
 }
+
+.forget-device {
+  border: none;
+  border-radius: .5rem;
+  color: rgb(230, 92, 92);
+  background-color: blue;
+  box-shadow: 0 1px 5px rgb(0, 0, 0, 0.5);
+}
+
 .search {
   display: flex;
   justify-content: center;
