changed navbar styling to account for mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,6 +12,12 @@
   }
 }
 
+@media (max-width: 780px) {
+  .navbar {
+    position: absolute;
+    bottom: 0px;
+  }
+}
 .welcome-user {
   margin: 3rem;
   font-size: larger;
@@ -37,6 +43,9 @@ html, body {
   text-align: center;
 }
 
+.navbar-app {
+  position: absolute;
+}
 .subscribe {
   display: flex;
   justify-content: center;
