--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,12 +1,32 @@
-.navbar {
-  position: absolute;
-  top: 0px;
-  height: 90px;
-  background-color: blue;
+@media (max-width: 780px) {
+  .navbar {
+    flex-direction: column;
+    gap: 1rem;
+    background-color: blue;
+    word-wrap: wrap;
+  }
+
+  .logo-options {
+    justify-self: center;
+  }
+
+  .search:hover {
+    transform: none;
+  }
 }
 
+.navbar {
+    display: flex;
+    justify-content:space-around;
+    background-color: blue;
+    word-wrap: wrap;
+    flex-wrap: wrap;
+    overflow: hidden;
+  }
+
+
 .logo {
-  padding-left: 1rem;
+  margin-left: 1rem;
   transition: all 0.3s ease-out;
   cursor: pointer;
 }
@@ -16,18 +36,21 @@
 }
 
 .logo-options {
+  margin-left: 1rem;
+  position: absolute;
+  top: 0;
+  z-index: 1000;
   display: flex;
   opacity: 0;                   
   pointer-events: none;
-  position: absolute;
-  left: 1rem;
+  position: relative;
   transition: all 0.15s ease-out;
 }
 
 .logo-options.active {
   opacity: 1;
   pointer-events:all;
-  transform: translateY(4rem)
+  transform: translateY(3rem) 
 }
 
 .auth-button.log-out{
@@ -35,7 +58,6 @@
   border-radius: .5rem;
   color: rgb(230, 92, 92);
   background-color: blue;
-  
   box-shadow: 0 1px 5px rgb(0, 0, 0, 0.5);
 }
 
@@ -56,12 +78,11 @@
 }
 .search {
   display: flex;
+  gap: 1rem;
   justify-content: center;
   align-items: end;
-  position: relative;
-  right: 5rem;
   transition: all 0.1s ease-out;
-  border-radius: 3rem;
+  border-radius: 1rem;
   padding: .3rem;
 }
 
@@ -72,7 +93,8 @@
 
 .search:hover {
   cursor: pointer;
-  scale: 1.3;
+  background-color: yellow;
+  scale: 1.2;
   box-shadow: 0 0 20px rgba(0, 0, 0, 1);
 }
 
@@ -82,12 +104,11 @@
 
 .products {
   display: flex;
+  gap: 1rem;
   justify-content: center;
   align-items: end;
-  position: absolute;
-  right: 25rem;
   transition: all 0.1s ease-out;
-  border-radius: 3rem;
+  border-radius: 1rem;
   padding: .3rem;
 }
 
@@ -97,11 +118,33 @@
 }
 
 .products:hover {
-  scale: 1.3;
+  scale: 1.2;
+  background-color: yellow;
   cursor: pointer;
   box-shadow: 0 0 20px rgba(0, 0, 0, 1);
 }
 
 .products:active {
   color: grey;
+}
+
+.favorites {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: end;
+  transition: all 0.1s ease-out;
+  border-radius: 1rem;
+  padding: .3rem;
+}
+
+.favorites-link {
+  text-decoration: none;
+  color: black;
+}
+.favorites:hover {
+  scale: 1.2;
+  background-color: yellow;
+  cursor: pointer;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 1);
 }
