--- a/frontend/src/components/RegisterForm.css
+++ b/frontend/src/components/RegisterForm.css
@@ -23,7 +23,6 @@
 .welcome {
     justify-content: center;
     font-family: 'best buy';
-    font-size: 4rem;
     flex-wrap: none;
     text-align: center;
     font-weight: 900;
@@ -47,7 +46,6 @@
     display: flex;
     flex-direction: column;
     width: 80vw;
-    height: 70vh;
     border-radius: 1rem;
     place-content: center;
     justify-content: center;
@@ -55,9 +53,10 @@
 }
 
 .page.field {
-    font-family: 'best buy';
+    text-align: center;
     justify-self: center;
     transition: all 0.3s ease-out;
+    width: 50%;
 }
 
 .page.review {
@@ -75,7 +74,8 @@
     justify-self: center;
     background: transparent;
     border: .1rem solid blue;
-    border-radius: .5rem;
+    border-radius: .3rem;
+    width: 100%;
 }
 
 .form-input:hover {
