--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,12 +1,33 @@
-.navbar {
-  position: absolute;
-  top: 0px;
-  height: 90px;
-  background-color: blue;
+@media (max-width: 1200px) {
+  .navbar {
+    flex-direction: column;
+    gap: 1rem;
+    background-color: blue;
+    word-wrap: wrap;
+  }
+
+  .logo-options {
+    left: 35%;
+    justify-self: center;
+  }
+
+  .search:hover {
+    transform: none;
+  }
 }
 
+.navbar {
+    display: flex;
+    justify-content:space-around;
+    background-color: blue;
+    word-wrap: wrap;
+    flex-wrap: wrap;
+    overflow: hidden;
+  }
+
+
 .logo {
-  padding-left: 1rem;
+  margin-left: 1rem;
   transition: all 0.3s ease-out;
   cursor: pointer;
 }
@@ -16,19 +37,21 @@
 }
 
 .logo-options {
+  margin-left: 1rem;
+  position: absolute;
+  top: 0;
+  z-index: 1000;
   display: flex;
-  flex-direction: column;
   opacity: 0;                   
   pointer-events: none;
-  position: absolute;
-  left: 1rem;
+  position: relative;
   transition: all 0.15s ease-out;
 }
 
 .logo-options.active {
   opacity: 1;
   pointer-events:all;
-  transform: translateY(5rem)
+  transform: translateY(3rem) 
 }
 
 .auth-button.log-out{
@@ -54,34 +77,25 @@
   background-color: yellow;
   box-shadow: 0 1px 5px rgb(0, 0, 0, 0.5);
 }
-
-.forget-device {
-  border: none;
-  border-radius: .5rem;
-  color: rgb(230, 92, 92);
-  background-color: blue;
-  box-shadow: 0 1px 5px rgb(0, 0, 0, 0.5);
-}
-
 .search {
   display: flex;
+  gap: 1rem;
   justify-content: center;
   align-items: end;
-  position: relative;
-  right: 5rem;
   transition: all 0.1s ease-out;
-  border-radius: 3rem;
+  border-radius: 1rem;
   padding: .3rem;
 }
 
 .search-link {
   text-decoration: none;
-  color: black;
+  color: grey;
 }
 
 .search:hover {
   cursor: pointer;
-  scale: 1.3;
+  background-color: yellow;
+  scale: 1.2;
   box-shadow: 0 0 20px rgba(0, 0, 0, 1);
 }
 
@@ -91,12 +105,11 @@
 
 .products {
   display: flex;
+  gap: 1rem;
   justify-content: center;
   align-items: end;
-  position: absolute;
-  right: 25rem;
   transition: all 0.1s ease-out;
-  border-radius: 3rem;
+  border-radius: 1rem;
   padding: .3rem;
 }
 
@@ -106,11 +119,33 @@
 }
 
 .products:hover {
-  scale: 1.3;
+  scale: 1.2;
+  background-color: yellow;
   cursor: pointer;
   box-shadow: 0 0 20px rgba(0, 0, 0, 1);
 }
 
 .products:active {
   color: grey;
+}
+
+.nav-option {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: end;
+  transition: all 0.1s ease-out;
+  border-radius: 1rem;
+  padding: .3rem;
+}
+
+.favorites-link {
+  text-decoration: none;
+  color: grey;
+}
+.nav-option:hover {
+  scale: 1.2;
+  background-color: yellow;
+  cursor: pointer;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 1);
 }
