--- a/frontend/src/components/RegisterForm.css
+++ b/frontend/src/components/RegisterForm.css
@@ -51,6 +51,8 @@
 }
 
 .page.field {
+    display: flex;
+    justify-content: center;
     text-align: center;
     justify-self: center;
     transition: all 0.3s ease-out;
@@ -65,9 +67,11 @@
     border-radius: 1rem;
     text-align: center;
     transition: all 0.3s ease-out;
+    white-space: normal;
 }
 
 .form-input {
+    display: flex;
     text-align: center;
     justify-self: center;
     background: transparent;
@@ -82,6 +86,8 @@
 
 .form-input:focus {
     cursor: text;
+    outline: none;
+
 }
 
 .page.review > p:nth-child(2n+1) {
@@ -103,6 +109,8 @@
 
 
 .buttons {
+    display: flex;
+    justify-content: space-around;
     font-family: 'Best Buy'
 }
 
